# miniVulkanRenderer2

./: .gitignore  CMakeLists.txt  README.md  Screenshot.md  pass.drawio
assets/: lightScene.gltf  logo.txt
assets/BattleCruiser/: BattleCruiser.mtl  README.md
assets/box/: Box.gltf
assets/plane/: plane.gltf  plane1.gltf
assets/smpl/: smpl.mtl
assets/texturePlane/: texturePlane.blend  texturePlane.blend1  texturePlane.gltf
shaders/: deviceDataStruct.h  diffuseIrradiance.frag  diffuseIrradiance.geom  diffuseIrradiance.vert  fragmentShader.frag  geometry.frag  geometry.vert  globals.glsl  gltfMaterial.glsl  hdrToCubemap.frag  hdrToCubemap.geom  hdrToCubemap.vert  layouts.glsl  lighting.frag  pathtrace.glsl  pbbloomDownSampling.frag  pbbloomUpSampling.frag  pbr.glsl  pbr_gltf.glsl  post.frag  post.frag.spv  post.vert  post.vert.spv  random.glsl  raycommon.glsl  raytrace.rahit  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceShadow.rmiss  sampling.glsl  shadeState.glsl  shadowMap.vert  shadowMapPoint.frag  shadowMapPoint.geom  shadowMapPoint.vert  skybox.frag  skybox.vert  ssao.frag  ssaoBlur.frag  (+6 more)
spv/: fragmentShader.frag.spv  post.frag.spv  post.vert.spv  raytrace.rchit.spv  raytrace.rgen.spv  raytrace.rmiss.spv  raytraceShadow.rmiss.spv  vertexShader.vert.spv
src/: CMakeLists.txt  main.cpp  miniVulkanRenderer.cpp  miniVulkanRenderer.h
src/Common/: assertPath.h  camera.cpp  camera.h  common.cpp  common.h  deviceDataStruct.h  light.cpp  light.h  material.cpp  material.h  miniError.h  miniLog.cpp  miniLog.h  vertex.h
src/Platform/: GUIWindow.cpp  GUIWindow.h  glfwWindow.cpp  glfwWindow.h
src/Rendering/: SSRPipelineBuilder.cpp  SSRPipelineBuilder.h  graphicsPipelineBuilder.cpp  graphicsPipelineBuilder.h  graphicsRenderPass.cpp  graphicsRenderPass.h  makeCubeMapPipeline.cpp  makeCubeMapPipeline.h  pbbloomPipelineBuilder.cpp  pbbloomPipelineBuilder.h  pipeline.h  postQuad.cpp  postQuad.h  rayTracingBuilder.cpp  rayTracingBuilder.h  renderContext.cpp  renderContext.h  renderFrame.cpp  renderFrame.h  renderPass.cpp  renderPass.h  renderTarget.cpp  renderTarget.h  shadowPipelineBuilder.cpp  shadowPipelineBuilder.h  skyLIghtCube.cpp  skyLightCube.h  ssaoPipelineBuilder.cpp  ssaoPipelineBuilder.h
src/ResourceManagement/: ResourceManager.cpp  ResourceManager.h  boundingBox.h  gltfLoader.cpp  gltfLoader.h  model.cpp  model.h  objLoader.cpp  objLoader.h  postQuad.cpp  resourceManagement.cpp  resourceManagement.h  shape.cpp  shape.h  texture.h
src/Sprite/: sprite.cpp  sprite.h  spriteList.cpp  spriteList.h
src/Vulkan/: CMakeLists.txt  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetBindings.cpp  descriptorSetBindings.h  descriptorSetLayout.cpp  descriptorSetLayout.h  device.cpp  device.h  deviceMemory.cpp  deviceMemory.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  graphicPipeline.cpp  graphicPipeline.h  graphicsPipeline.cpp  graphicsPipeline.h  graphicsPipelineBuilder.cpp  graphicsPipelineBuilder.h  image.cpp  image.h  imageView.cpp  imageView.h  instance.cpp  instance.h  physicalDevice.cpp  physicalDevice.h  pipelineLayout.cpp  pipelineLayout.h  queryPool.cpp  (+22 more)
